# terragrunt-github-actions-aws-ecs

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: pytest-api.yml  terragrunt.yml
containers/api/: Dockerfile
containers/api/app/: main.py  pyproject.toml
containers/api/app/config/: settings.py
containers/api/app/tests/: test_main.py
containers/frontend/: Dockerfile
containers/frontend/app/: package.json  server.js
hooks/: pre-commit
scripts/: configure_github_actions_runner.sh  manual_push_images_to_ecr.sh
terraform/: common.terragrunt.hcl  terragrunt.hcl
terraform/infrastructure/main/: account.terragrunt.hcl
terraform/infrastructure/main/eu-west-1/: region.terragrunt.hcl
terraform/infrastructure/main/eu-west-1/stage/: .api.environment.json  .api.secrets.json  .frontend.environment.json  environment.terragrunt.hcl
terraform/infrastructure/main/eu-west-1/stage/services/app/: terragrunt.hcl
terraform/modules/services/app/: api.tf  api_secrets.tf  frontend.tf  main.tf  variables.tf
